# Hisogram_NER_OpenMP

./: CMakeLists.txt  Histogram.h  README.md  main.cpp
results/locations/: data_locations.txt
results/organizations/: data_organizations.txt
results/persons/: data_persons.txt
